Overflow issue with player list

--- a/html/style.css
+++ b/html/style.css
@@ -83,6 +83,7 @@ body {
     height: calc(100% - 7.5%);
     width: calc(100% - 25%);
     margin-top: -6.7%;
+    overflow: scroll;
 }
 
 table {
